[tool.poetry]
name = "ceph-backport"
version = "0.1.0"
description = ""
authors = ["Loïc Dachary <loic@dachary.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pre-commit = "*"
requests = "*"
black = "*"
isort = "*"
furl = "*"
GitPython = "*"
sh = "^*"
python-redmine = "*"
ndjson = "*"
jschon = "*"
fedeproxy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
