[tool.poetry]
name = "ceph-workbench"
version = "0.1.0"
description = ""
authors = ["Loïc Dachary <loic@dachary.org>"]

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.13.0"
black = "^21.6b0"
isort = "^5.8.0"
python-redmine = "^2.3.0"
tox = "^3.23.1"
pytest = "^6.2.4"
tox-poetry = "^0.4.0"
setuptools = "^57.0.0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
