#
# Interpreted by pbr
#   https://pypi.python.org/pypi/pbr
#   http://docs.openstack.org/developer/pbr/
#
[metadata]
name = ceph-workbench
version = 1.5.20
summary = a command-line toolbox for Ceph
description-file =
    README.rst
author = Loic Dachary
author-email = loic@dachary.org
home-page = http://ceph-workbench.fedeproxy.eu/ceph/ceph-workbench
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

[files]
scripts = 
  bin/ceph-workbench
packages = ceph_workbench
data_files =
    lib/ceph-workbench = data_files/*

[build_sphinx]
all_files = 1
build-dir = build
source-dir = docs

[global]
setup-hooks =
    pbr.hooks.setup_hook
